motivate the inclusion of symmetries

--- a/tex/overview.tex
+++ b/tex/overview.tex
@@ -202,7 +202,7 @@ operations which leaves $\hier(G)$ invariant for a given graph $G$ \reffighiertr
 For instance, we may interchange the positions of the strongly
 connected components relative to each other \reffighiertransformations$a$.  Leaving the components fixed, we may move links between nodes in a component \reffighiertransformations$b$ or between components, or even add or delete links \reffighiertransformations$c$.
 
-Symmetries with respect to some property of the system are characterized by the ability to interchange these modules or their connectivity without changing that property. Two of these three intrinsic symmetries of $\hier$ are also symmetries with respect to dynamical robustness. \ref{fig:robustnesssymmetries} shows an example of these latter symmetries applied to a specific interaction graph.
+Symmetries with respect to some property of the system are characterized by the ability to interchange these modules or their connectivity without changing that property. Two of these three intrinsic symmetries of $\hier$ are also symmetries with respect to dynamical robustness. \ref{fig:robustnesssymmetries} shows an example of these latter symmetries applied to a specific interaction graph. The collections of networks that have equivalent dynamical robustness characterized by its symmetries allow for a classification of neutral networks with respect to any process in which maximal robustness is selected for.
 
 \section{Derivation of the relationship between network architecture and robustness}
 Here we show that dynamical robustness is maximized by the most hierarchical of network architectures. In doing so, we restrict to a set of graphs which has the same SCCs but may have different links between the components, consider a stochastic process as a simple model for evolution that independently resamples individual elements of Jacobian matrices, and maximize robustness in that context.
