update supplemental figure captions

--- a/tex/figuressupp.tex
+++ b/tex/figuressupp.tex
@@ -21,7 +21,7 @@
 \begin{figure}[!ht]
 \centering
 \noindent\includegraphics[width=0.6\columnwidth]{fig/apstab3x3.pdf}
-\caption{{\bf System stability as a function of connectivity.} The red points represent the average of system stability at each connectivity.}
+\caption{{\bf System stability as a function of connectivity.} The probability of stability is plotted versus connectivity for all three component systems. We note that, in contrast to robustness, the stability ranges over less than 10\% of the possible dynamic range and demonstrates no obvious significant correlation with connectivity. The red points represent the average of system stability at each connectivity.}
 \label{fig:apstab3x3}
 \end{figure}
 
@@ -31,7 +31,7 @@
 \begin{figure}[!ht]
 \centering
 \noindent\includegraphics[width=0.6\columnwidth]{fig/cycle3x3.pdf}
-\caption{{\bf dynamical robustness as a function of number of cycles.} }
+\caption{{\bf Dynamical robustness as a function of cycle number.} Note that number of cycles alone does not classify networks according to their dynamical robustness.}
 \label{fig:cycle3x3}
 \end{figure}
 
