update sections on structural stability

--- a/tex/methods.tex
+++ b/tex/methods.tex
@@ -3,7 +3,8 @@
 
 \section{Reaction Networks, Gene Regulatory Networks, and Ecological Networks with Prescribed Connectivity and Jacobians}\label{sec:reactionnetjacobian}
 
-The quality of interest in this paper is robustness, which is related to the concept of structural stability (see \ref{sec:dynrobustandstructstab}), whose evaluation requires the determination of whether or not a given dynamical system that is determined to be stable remains stable under a perturbation to one or more of its defining parameters, its rate functions, or environmental constraints that restrict it to a subset of its basins of attraction. We mean to refer to perturbations to the structure of the system itself as determined by the strengths of the couplings between the components and not only to perturbations of the state vector at a given point in time. It is justified to consider resampling elements of $A$ to generate $A'$ as a proxy for resampling elements of $\vec{p}$ to produce $\vec{p}\,'$ if any matrix $A$ can be obtained for some $F_i$, $\vec{p}$ and $\vec{x}^0$. This holds for the $F_i$ defining the Lotka-Volterra model. This is due to the fact that for a specification of non-zero real numbers for the components of $\vec{x}^0$ and any real numbers for the components of $a_{ij}$, there is a choice of parameters $\vec{p}$ given by $b_{ij} = \frac{a_{ij}}{x_i^0}$ and $r_i = - \sum_{j=1}^n \frac{x_j^0}{x_i^0} a_{ij}$ that generates those particular $a_{ij}$ as the Jacobian matrix of the dynamical system. Checking this property of the domain of realizability of the Jacobian can be done for ensembles of systems other than the Lotka-Volterra ensemble. For arbitrary biochemical reaction and gene regulatory networks, this property is likely to hold so long as not too many types of transformations are constrained from possibility. For example, a simplified version of the general form of the gene regulatory network model presented in \ref{fig:biomodelexamples} center panel is given by the system
+% The quality of interest in this paper is robustness, which is related to the concept of structural stability (see \ref{sec:dynrobustandstructstab}), whose
+The evaluation of \ref{eq:robustnessonjacobians} requires the determination of whether or not a given dynamical system that is determined to be stable remains stable under a perturbation to one or more of its defining parameters, its rate functions, or environmental constraints that restrict it to a subset of its basins of attraction. We mean to refer to perturbations to the structure of the system itself as determined by the strengths of the couplings between the components and not only to perturbations of the state vector at a given point in time. It is justified to consider resampling elements of $A$ to generate $A'$ as a proxy for resampling elements of $\vec{p}$ to produce $\vec{p}\,'$ if any matrix $A$ can be obtained for some $F_i$, $\vec{p}$ and $\vec{x}^0$. This holds for the $F_i$ defining the Lotka-Volterra model. This is due to the fact that for a specification of non-zero real numbers for the components of $\vec{x}^0$ and any real numbers for the components of $a_{ij}$, there is a choice of parameters $\vec{p}$ given by $b_{ij} = \frac{a_{ij}}{x_i^0}$ and $r_i = - \sum_{j=1}^n \frac{x_j^0}{x_i^0} a_{ij}$ that generates those particular $a_{ij}$ as the Jacobian matrix of the dynamical system. Checking this property of the domain of realizability of the Jacobian can be done for ensembles of systems other than the Lotka-Volterra ensemble. For arbitrary biochemical reaction and gene regulatory networks, this property is likely to hold so long as not too many types of transformations are constrained from possibility. For example, a simplified version of the general form of the gene regulatory network model presented in \ref{fig:biomodelexamples} center panel is given by the system
 \begin{equation}
 \frac{dg_i}{dt} = \sum_{j=1}^N k_{ij} g_j,
 \end{equation}
@@ -88,6 +89,6 @@ Corresponding to the SCC decomposition of $G$ we can construct a directed acycli
 
 Dynamical robustness differs from structural stability in several ways: most importantly, dynamical robustness is quantitative whereas structural stability is qualitative.  The usual definition states that a vector field is structurally stable if there exists an open neighborhood of that vector field so that every element of that neighborhood is topologically conjugate to the original vector field \cite{Smale1967}.  This definition only requires that there be an open set but makes no reference to the size of that set.  Thus a system would be considered structurally stable if there were but a tiny open neighborhood of topologically conjugate vector fields.  In such a situation, even a relatively small perturbation to the system could change its dynamics appreciably.  To distinguish this from a system which is also structurally stable, but which is surrounded by a large open set of conjugate systems and hence not susceptible to having its dynamics changed by a small perturbation, we introduced our quantitative probabilistic measure of dynamical robustness.
 
-Structural stability is usually formulated in terms of the space of all smooth vector fields endowed with the $C^1$ topology.  We did not want to do this for two reasons.  Theoretically, it is not clear how one would impose a probability measure on the set of all vector fields.  Practically, one does not expect that an environmental fluctuation will often change a dynamical system into any other arbitrary system but that it may introduce a change into a \emph{nearby} system that shares many features with the original.  Hence we formulate our definition in terms of a finite-dimensional, if still large, parameter space.
+Structural stability is usually formulated in terms of the space of all smooth vector fields endowed with the $C^1$ topology.  We did not want to do this for two reasons.  Theoretically, it is not clear how one would impose a probability measure on the set of all vector fields.  Practically, we do not consider environmental fluctuations that introduce a smooth simultaneous change to all possible interactions among system variables, but rather those that introduce a change in one or changes in a few interactions among system variables.  Hence we formulate our definition in terms of a finite-dimensional, if still large, space of possible systems.
 
-Structural stability is defined in terms of topological conjugacy which is a global condition ensuring that all features of the phase space are preserved.  We, however, are only interested in the portion of the state space near a certain fixed point and are not concerned with perturbations that might change the character of the phase space at points far away from the region of interest as long as they do not affect the neighborhood of the fixed point.  Thus, rather than being formulated globally, our definition is given locally in terms of the stability of a given fixed point.
+Structural stability is defined in terms of topological conjugacy which is a global condition ensuring that all features of the phase space are preserved.  We, however, are only interested in the portion of the state space near a particular fixed point and are not concerned with perturbations that might change the character of the phase space at points far away from the region of interest as long as they do not affect the neighborhood of the fixed point.  Thus, rather than being formulated globally, our definition is given locally in terms of the stability of a given fixed point.
