--- a/tex/introduction.tex
+++ b/tex/introduction.tex
@@ -4,12 +4,12 @@
 The traditional approach taken in the study of chemical reaction, gene-regulatory, population, and ecosystem networks is to derive a system of differential equations to model a particular biological network, attempt to fit that model to data and adjust the modeling assumptions along with parameter values until a good fit is achieved \cite{Meyer2014}. Over evolutionary timescales, one expects to observe changes in the model of best fit. All of these models utilize essentially equivalent mathematical structures, instances of which are sampled in the evolutionary process (\ref{fig:biomodelexamples}, \cite{RossCr2003,Palsson2011a,Sauro2012}). Developing unified mathematical descriptions of each of these that can be embedded into models of the evolutionary process is one of the paramount goals of systems biology.
 % \cite{RossCr2003,Alon2006,Palsson2006,HamidBolouri2008,Palsson2011a,Voit2012,Sauro2012}
 
-Recent work has demonstrated that as a result of the existence of largely insensitive directions within the parameter space for such models, the approach outlined above often allows for a large variety of models to fit equivalent data \cite{Machta2013,Hines2014,Prabakaran2014,Tonsing2014}. In addition, there is often uncertainty about the very structure of such networks. Since the evolutionary process results in modifications to the underlying model this fact may be used to characterize evolutionarily effective versus neutral spaces. In this context, it is crucial to gain insight into what dynamical phenomena are possible to observe within a given class of dynamical systems. This is necessary to understand in order to determine whether or not a given dynamical phenomenon should be regarded as unique or generic in the development and investigation of models applied to particular systems \cite{Gunawardena2013,Gunawardena2014}. This can be achieved using a method common in statistical physics involving the consideration of an ensemble of systems that, in comparison to one another, appear to have components that are randomly interlinked.
+Recent work has demonstrated that as a result of the existence of largely insensitive directions within the parameter space for such models, the approach outlined above often allows for a large variety of models to fit equivalent data \cite{Machta2013,Hines2014,Prabakaran2014,Tonsing2014}. In addition, there is often uncertainty about the very structure of such networks. Since the evolutionary process results in modifications to the underlying model this fact may be used to characterize evolutionarily effective versus neutral spaces. In this context, it is crucial to gain insight into what dynamical phenomena are possible to observe within a given class of dynamical systems. This is necessary to understand in order to determine whether or not a given dynamical phenomenon should be regarded as unique or generic in the development and investigation of models applied to particular systems \cite{Gunawardena2013,Gunawardena2014}. This can be achieved using a method common in statistical physics involving the consideration of an ensemble of systems \cite{Bialek2012}. For the case considered here, the ensemble of interest is defined by dynamical systems that, in comparison to one another, appear to have components that are randomly interlinked.
 % \cite{Brown2003,Gutenkunst2007,Daniels2008a,Machta2013,Hines2014,Prabakaran2014,Tonsing2014}
 
 % Some conclusions derived from this approach may be sensitive to the probability distribution from which the strengths of interconnection are sampled, whereas others are independent of the specific form of this distribution. In the former case, discovering the constraints that contribute to determining the functional form of the distribution can be a matter for empirical investigation and results that are themselves functions of this distribution can be reinterpreted in light of ongoing updates from relevant empirical observations. On the other hand, results that are independent of the specific form of this distribution can be expected to hold in any case and a specific distribution may simply be chosen for the purposes of exemplifying the result.
 
-Investigating generic properties of a large class of dynamical systems was the approach taken by May in models of ecosystem dynamics \cite{Gardner1970,May1972}. The class of dynamical systems studied by May is, however, not restricted to ecosystem dynamics and encompasses, among others, the dynamics of all of the networks represented in \ref{fig:biomodelexamples}. May conjectured on the basis of results from random matrix theory what eventually came to be referred to as the May-Wigner stability theorem \cite{Cohen1984,May1972a,Radius2014,Majumdar2014}, which implies a relationship between a topological property, system connectivity, and a dynamical property, stability.
+Investigating generic properties of a large class of dynamical systems was the approach taken by May in models of ecosystem dynamics \cite{Gardner1970,May1972}. The class of dynamical systems studied by May is, however, not restricted to ecosystem dynamics and encompasses, among others, the dynamics of all of the networks represented in \ref{fig:biomodelexamples}. May conjectured on the basis of results from random matrix theory what eventually came to be referred to as the May-Wigner stability theorem \cite{Cohen1984,May1972a,McMurtrie1975,Radius2014,Majumdar2014}, which implies a relationship between a topological property, system connectivity, and a dynamical property, stability.
 
 % \begin{figure*}[!ht]
 % \centering
